--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/dbstock
+spring.datasource.url= jdbc:postgresql://localhost:5432/dbstock?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
