--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/dbstock?createDatabaseIfNotExist=true
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.main.web-application-type=NONE
