--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+	compile 'com.opencsv:opencsv:4.1'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
