--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+	implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+	implementation 'org.mapdb:mapdb:3.0.4'
+
 	compile 'com.opencsv:opencsv:4.1'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
